--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snippet-demo",
   "displayName": "snippet-demo",
   "description": "简单易上手的 snippet vscode 插件模板",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "engines": {
     "vscode": "^1.68.0"
   },
@@ -15,20 +15,7 @@
     "docs": "node tools/docs/index.js"
   },
   "contributes": {
-    "snippets": [
-      {
-        "language": "javascript",
-        "path": "./snippets/javascript.json"
-      },
-      {
-        "language": "vue",
-        "path": "./snippets/vue.json"
-      },
-      {
-        "language": "proto3",
-        "path": "./snippets/proto3.json"
-      }
-    ]
+    "snippets": []
   },
   "snippetFilter": [
     {
